# sibyl-system

./: CHANGELOG.md  INSTALL  LICENCE  install.sh
sibyl/: CMakeLists.txt  CMakePresets.json  install.sh
sibyl/cmake/: Coverage.cmake  Doxygen.cmake  GetSpdlog.cmake  Packaging.cmake  Testing.cmake
sibyl/src/: CMakeLists.txt  sibyl.cpp
sibyl/src/include/: sibyl.hpp
sibyl/src/libevdev/: CMakeLists.txt
sibyl/src/libevdev/test/: test-static-link
sibyl/src/libevdev/tools/: libevdev-list-codes
system/: CMakeLists.txt  CMakePresets.json  README.md  reload.sh
system/cmake/: Packaging.cmake  buildinfo.h.in
system/src/: CMakeLists.txt  main.cpp
system/test/: CMakeLists.txt
system/test/app1/: CMakeLists.txt  basic_test.cpp
system/test/sibyl/: CMakeLists.txt  tui_test.cpp
